--- a/index.html
+++ b/index.html
@@ -192,10 +192,7 @@
 
     <section class="contact bg-primary" id="contact">
         <div class="container">
-            <h2>We 
-                <i class="fas fa-heart"></i>
-                new friends!
-            </h2>
+            <h2>We <span style="color: red;"> &#10084;</span> new friends!</h2>
             <ul class="list-inline list-social">
                 <li class="list-inline-item social-twitter">
                     <a href="https://twitter.com/" data-toggle="tooltip"
